tests/errors/first_stage/operation/immediate_oor/immediate_oor.as
; immediate operand was out of range
; these numbers are in range
prn #2047
prn #-2048

; this one isn't
prn #2048